// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProfileCard Snapshots Avatar Variants renders with empty avatar URL: ProfileCard - Empty Avatar URL 1`] = `
<View
  style={
    [
      {},
      {
        "flex": 1,
        "height": "100%",
        "width": "100%",
      },
      undefined,
    ]
  }
>
  <View
    accessibilityHint="Opens your profile details"
    accessibilityLabel="Warren de Leon, View Profile"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    className="data-[focus-visible=true]:outline-none data-[focus-visible=true]:ring-indicator-info data-[focus-visible=true]:ring-2 data-[disabled=true]:opacity-40 w-full rounded-2xl p-3"
    collapsable={false}
    dataSet={
      {
        "active": "false",
        "disabled": "false",
        "focus": "false",
        "focusVisible": "false",
        "hover": "false",
      }
    }
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    states={
      {
        "active": false,
        "disabled": undefined,
        "focus": false,
        "focusVisible": false,
        "hover": false,
      }
    }
    style={
      {
        "backgroundColor": "#FFFFFF",
      }
    }
    testID="profile-card"
  >
    <View
      className="flex-row gap-3 items-center"
    >
      <View
        className="rounded-full justify-center items-center relative bg-primary-600 group-[.avatar-group]/avatar-group:-ml-2.5 w-12 h-12"
        style={
          {
            "backgroundColor": "#E5E7EB",
          }
        }
        testID="profile-card-avatar"
      >
        <MaterialCommunityIcons
          color="#6B7280"
          name="account"
          size={28}
        />
        <Image
          alt="Warren de Leon"
          className="h-full w-full rounded-full absolute z-10"
          onError={[Function]}
          source={
            {
              "uri": "",
            }
          }
        />
      </View>
      <View
        className="flex-col gap-1 flex-1"
      >
        <Text
          style={
            {
              "color": "#000000",
            }
          }
        >
          Warren de Leon
        </Text>
        <Text
          style={
            {
              "color": "#6B6B6B",
            }
          }
        >
          View Profile
        </Text>
      </View>
      <RNSVGSvgView
        align="xMidYMid"
        bbHeight={20}
        bbWidth={20}
        fill="none"
        focusable={false}
        height={20}
        meetOrSlice={0}
        minX={0}
        minY={0}
        stroke="#6B6B6B"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth={2}
        style={
          [
            {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            {
              "flex": 0,
              "height": 20,
              "width": 20,
            },
          ]
        }
        vbHeight={24}
        vbWidth={24}
        width={20}
        xmlns="http://www.w3.org/2000/svg"
      >
        <RNSVGGroup
          fill={null}
          propList={
            [
              "fill",
              "stroke",
              "strokeWidth",
              "strokeLinecap",
              "strokeLinejoin",
            ]
          }
          stroke={
            {
              "payload": 4285229931,
              "type": 0,
            }
          }
          strokeLinecap={1}
          strokeLinejoin={1}
          strokeWidth={2}
        >
          <RNSVGPath
            d="m9 18 6-6-6-6"
            fill={null}
            propList={
              [
                "fill",
                "stroke",
                "strokeWidth",
                "strokeLinecap",
                "strokeLinejoin",
              ]
            }
            stroke={
              {
                "payload": 4285229931,
                "type": 0,
              }
            }
            strokeLinecap={1}
            strokeLinejoin={1}
            strokeWidth={2}
          />
        </RNSVGGroup>
      </RNSVGSvgView>
    </View>
  </View>
</View>
`;

exports[`ProfileCard Snapshots Avatar Variants renders with placeholder avatar URL: ProfileCard - Placeholder Avatar 1`] = `
<View
  style={
    [
      {},
      {
        "flex": 1,
        "height": "100%",
        "width": "100%",
      },
      undefined,
    ]
  }
>
  <View
    accessibilityHint="Opens your profile details"
    accessibilityLabel="Warren de Leon, View Profile"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    className="data-[focus-visible=true]:outline-none data-[focus-visible=true]:ring-indicator-info data-[focus-visible=true]:ring-2 data-[disabled=true]:opacity-40 w-full rounded-2xl p-3"
    collapsable={false}
    dataSet={
      {
        "active": "false",
        "disabled": "false",
        "focus": "false",
        "focusVisible": "false",
        "hover": "false",
      }
    }
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    states={
      {
        "active": false,
        "disabled": undefined,
        "focus": false,
        "focusVisible": false,
        "hover": false,
      }
    }
    style={
      {
        "backgroundColor": "#FFFFFF",
      }
    }
    testID="profile-card"
  >
    <View
      className="flex-row gap-3 items-center"
    >
      <View
        className="rounded-full justify-center items-center relative bg-primary-600 group-[.avatar-group]/avatar-group:-ml-2.5 w-12 h-12"
        style={
          {
            "backgroundColor": "#E5E7EB",
          }
        }
        testID="profile-card-avatar"
      >
        <MaterialCommunityIcons
          color="#6B7280"
          name="account"
          size={28}
        />
        <Image
          alt="Warren de Leon"
          className="h-full w-full rounded-full absolute z-10"
          onError={[Function]}
          source={
            {
              "uri": "https://via.placeholder.com/150",
            }
          }
        />
      </View>
      <View
        className="flex-col gap-1 flex-1"
      >
        <Text
          style={
            {
              "color": "#000000",
            }
          }
        >
          Warren de Leon
        </Text>
        <Text
          style={
            {
              "color": "#6B6B6B",
            }
          }
        >
          View Profile
        </Text>
      </View>
      <RNSVGSvgView
        align="xMidYMid"
        bbHeight={20}
        bbWidth={20}
        fill="none"
        focusable={false}
        height={20}
        meetOrSlice={0}
        minX={0}
        minY={0}
        stroke="#6B6B6B"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth={2}
        style={
          [
            {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            {
              "flex": 0,
              "height": 20,
              "width": 20,
            },
          ]
        }
        vbHeight={24}
        vbWidth={24}
        width={20}
        xmlns="http://www.w3.org/2000/svg"
      >
        <RNSVGGroup
          fill={null}
          propList={
            [
              "fill",
              "stroke",
              "strokeWidth",
              "strokeLinecap",
              "strokeLinejoin",
            ]
          }
          stroke={
            {
              "payload": 4285229931,
              "type": 0,
            }
          }
          strokeLinecap={1}
          strokeLinejoin={1}
          strokeWidth={2}
        >
          <RNSVGPath
            d="m9 18 6-6-6-6"
            fill={null}
            propList={
              [
                "fill",
                "stroke",
                "strokeWidth",
                "strokeLinecap",
                "strokeLinejoin",
              ]
            }
            stroke={
              {
                "payload": 4285229931,
                "type": 0,
              }
            }
            strokeLinecap={1}
            strokeLinejoin={1}
            strokeWidth={2}
          />
        </RNSVGGroup>
      </RNSVGSvgView>
    </View>
  </View>
</View>
`;

exports[`ProfileCard Snapshots Avatar Variants renders with valid avatar URL: ProfileCard - Valid Avatar URL 1`] = `
<View
  style={
    [
      {},
      {
        "flex": 1,
        "height": "100%",
        "width": "100%",
      },
      undefined,
    ]
  }
>
  <View
    accessibilityHint="Opens your profile details"
    accessibilityLabel="Warren de Leon, View Profile"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    className="data-[focus-visible=true]:outline-none data-[focus-visible=true]:ring-indicator-info data-[focus-visible=true]:ring-2 data-[disabled=true]:opacity-40 w-full rounded-2xl p-3"
    collapsable={false}
    dataSet={
      {
        "active": "false",
        "disabled": "false",
        "focus": "false",
        "focusVisible": "false",
        "hover": "false",
      }
    }
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    states={
      {
        "active": false,
        "disabled": undefined,
        "focus": false,
        "focusVisible": false,
        "hover": false,
      }
    }
    style={
      {
        "backgroundColor": "#FFFFFF",
      }
    }
    testID="profile-card"
  >
    <View
      className="flex-row gap-3 items-center"
    >
      <View
        className="rounded-full justify-center items-center relative bg-primary-600 group-[.avatar-group]/avatar-group:-ml-2.5 w-12 h-12"
        style={
          {
            "backgroundColor": "#E5E7EB",
          }
        }
        testID="profile-card-avatar"
      >
        <MaterialCommunityIcons
          color="#6B7280"
          name="account"
          size={28}
        />
        <Image
          alt="Warren de Leon"
          className="h-full w-full rounded-full absolute z-10"
          onError={[Function]}
          source={
            {
              "uri": "https://example.com/avatar.png",
            }
          }
        />
      </View>
      <View
        className="flex-col gap-1 flex-1"
      >
        <Text
          style={
            {
              "color": "#000000",
            }
          }
        >
          Warren de Leon
        </Text>
        <Text
          style={
            {
              "color": "#6B6B6B",
            }
          }
        >
          View Profile
        </Text>
      </View>
      <RNSVGSvgView
        align="xMidYMid"
        bbHeight={20}
        bbWidth={20}
        fill="none"
        focusable={false}
        height={20}
        meetOrSlice={0}
        minX={0}
        minY={0}
        stroke="#6B6B6B"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth={2}
        style={
          [
            {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            {
              "flex": 0,
              "height": 20,
              "width": 20,
            },
          ]
        }
        vbHeight={24}
        vbWidth={24}
        width={20}
        xmlns="http://www.w3.org/2000/svg"
      >
        <RNSVGGroup
          fill={null}
          propList={
            [
              "fill",
              "stroke",
              "strokeWidth",
              "strokeLinecap",
              "strokeLinejoin",
            ]
          }
          stroke={
            {
              "payload": 4285229931,
              "type": 0,
            }
          }
          strokeLinecap={1}
          strokeLinejoin={1}
          strokeWidth={2}
        >
          <RNSVGPath
            d="m9 18 6-6-6-6"
            fill={null}
            propList={
              [
                "fill",
                "stroke",
                "strokeWidth",
                "strokeLinecap",
                "strokeLinejoin",
              ]
            }
            stroke={
              {
                "payload": 4285229931,
                "type": 0,
              }
            }
            strokeLinecap={1}
            strokeLinejoin={1}
            strokeWidth={2}
          />
        </RNSVGGroup>
      </RNSVGSvgView>
    </View>
  </View>
</View>
`;

exports[`ProfileCard Snapshots Dark Mode renders default state in dark mode: ProfileCard - Dark Mode Default 1`] = `
<View
  style={
    [
      {},
      {
        "flex": 1,
        "height": "100%",
        "width": "100%",
      },
      undefined,
    ]
  }
>
  <View
    accessibilityHint="Opens your profile details"
    accessibilityLabel="Warren de Leon, View Profile"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    className="data-[focus-visible=true]:outline-none data-[focus-visible=true]:ring-indicator-info data-[focus-visible=true]:ring-2 data-[disabled=true]:opacity-40 w-full rounded-2xl p-3"
    collapsable={false}
    dataSet={
      {
        "active": "false",
        "disabled": "false",
        "focus": "false",
        "focusVisible": "false",
        "hover": "false",
      }
    }
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    states={
      {
        "active": false,
        "disabled": undefined,
        "focus": false,
        "focusVisible": false,
        "hover": false,
      }
    }
    style={
      {
        "backgroundColor": "#262626",
      }
    }
    testID="profile-card"
  >
    <View
      className="flex-row gap-3 items-center"
    >
      <View
        className="rounded-full justify-center items-center relative bg-primary-600 group-[.avatar-group]/avatar-group:-ml-2.5 w-12 h-12"
        style={
          {
            "backgroundColor": "#374151",
          }
        }
        testID="profile-card-avatar"
      >
        <MaterialCommunityIcons
          color="#9CA3AF"
          name="account"
          size={28}
        />
        <Image
          alt="Warren de Leon"
          className="h-full w-full rounded-full absolute z-10"
          onError={[Function]}
          source={
            {
              "uri": "https://example.com/avatar.jpg",
            }
          }
        />
      </View>
      <View
        className="flex-col gap-1 flex-1"
      >
        <Text
          style={
            {
              "color": "#FFFFFF",
            }
          }
        >
          Warren de Leon
        </Text>
        <Text
          style={
            {
              "color": "#A3A3A3",
            }
          }
        >
          View Profile
        </Text>
      </View>
      <RNSVGSvgView
        align="xMidYMid"
        bbHeight={20}
        bbWidth={20}
        fill="none"
        focusable={false}
        height={20}
        meetOrSlice={0}
        minX={0}
        minY={0}
        stroke="#A3A3A3"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth={2}
        style={
          [
            {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            {
              "flex": 0,
              "height": 20,
              "width": 20,
            },
          ]
        }
        vbHeight={24}
        vbWidth={24}
        width={20}
        xmlns="http://www.w3.org/2000/svg"
      >
        <RNSVGGroup
          fill={null}
          propList={
            [
              "fill",
              "stroke",
              "strokeWidth",
              "strokeLinecap",
              "strokeLinejoin",
            ]
          }
          stroke={
            {
              "payload": 4288914339,
              "type": 0,
            }
          }
          strokeLinecap={1}
          strokeLinejoin={1}
          strokeWidth={2}
        >
          <RNSVGPath
            d="m9 18 6-6-6-6"
            fill={null}
            propList={
              [
                "fill",
                "stroke",
                "strokeWidth",
                "strokeLinecap",
                "strokeLinejoin",
              ]
            }
            stroke={
              {
                "payload": 4288914339,
                "type": 0,
              }
            }
            strokeLinecap={1}
            strokeLinejoin={1}
            strokeWidth={2}
          />
        </RNSVGGroup>
      </RNSVGSvgView>
    </View>
  </View>
</View>
`;

exports[`ProfileCard Snapshots Light Mode renders default state in light mode: ProfileCard - Light Mode Default 1`] = `
<View
  style={
    [
      {},
      {
        "flex": 1,
        "height": "100%",
        "width": "100%",
      },
      undefined,
    ]
  }
>
  <View
    accessibilityHint="Opens your profile details"
    accessibilityLabel="Warren de Leon, View Profile"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    className="data-[focus-visible=true]:outline-none data-[focus-visible=true]:ring-indicator-info data-[focus-visible=true]:ring-2 data-[disabled=true]:opacity-40 w-full rounded-2xl p-3"
    collapsable={false}
    dataSet={
      {
        "active": "false",
        "disabled": "false",
        "focus": "false",
        "focusVisible": "false",
        "hover": "false",
      }
    }
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    states={
      {
        "active": false,
        "disabled": undefined,
        "focus": false,
        "focusVisible": false,
        "hover": false,
      }
    }
    style={
      {
        "backgroundColor": "#FFFFFF",
      }
    }
    testID="profile-card"
  >
    <View
      className="flex-row gap-3 items-center"
    >
      <View
        className="rounded-full justify-center items-center relative bg-primary-600 group-[.avatar-group]/avatar-group:-ml-2.5 w-12 h-12"
        style={
          {
            "backgroundColor": "#E5E7EB",
          }
        }
        testID="profile-card-avatar"
      >
        <MaterialCommunityIcons
          color="#6B7280"
          name="account"
          size={28}
        />
        <Image
          alt="Warren de Leon"
          className="h-full w-full rounded-full absolute z-10"
          onError={[Function]}
          source={
            {
              "uri": "https://example.com/avatar.jpg",
            }
          }
        />
      </View>
      <View
        className="flex-col gap-1 flex-1"
      >
        <Text
          style={
            {
              "color": "#000000",
            }
          }
        >
          Warren de Leon
        </Text>
        <Text
          style={
            {
              "color": "#6B6B6B",
            }
          }
        >
          View Profile
        </Text>
      </View>
      <RNSVGSvgView
        align="xMidYMid"
        bbHeight={20}
        bbWidth={20}
        fill="none"
        focusable={false}
        height={20}
        meetOrSlice={0}
        minX={0}
        minY={0}
        stroke="#6B6B6B"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth={2}
        style={
          [
            {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            {
              "flex": 0,
              "height": 20,
              "width": 20,
            },
          ]
        }
        vbHeight={24}
        vbWidth={24}
        width={20}
        xmlns="http://www.w3.org/2000/svg"
      >
        <RNSVGGroup
          fill={null}
          propList={
            [
              "fill",
              "stroke",
              "strokeWidth",
              "strokeLinecap",
              "strokeLinejoin",
            ]
          }
          stroke={
            {
              "payload": 4285229931,
              "type": 0,
            }
          }
          strokeLinecap={1}
          strokeLinejoin={1}
          strokeWidth={2}
        >
          <RNSVGPath
            d="m9 18 6-6-6-6"
            fill={null}
            propList={
              [
                "fill",
                "stroke",
                "strokeWidth",
                "strokeLinecap",
                "strokeLinejoin",
              ]
            }
            stroke={
              {
                "payload": 4285229931,
                "type": 0,
              }
            }
            strokeLinecap={1}
            strokeLinejoin={1}
            strokeWidth={2}
          />
        </RNSVGGroup>
      </RNSVGSvgView>
    </View>
  </View>
</View>
`;

exports[`ProfileCard Snapshots Light Mode renders with custom testID in light mode: ProfileCard - Light Mode Custom TestID 1`] = `
<View
  style={
    [
      {},
      {
        "flex": 1,
        "height": "100%",
        "width": "100%",
      },
      undefined,
    ]
  }
>
  <View
    accessibilityHint="Opens your profile details"
    accessibilityLabel="Warren de Leon, View Profile"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    className="data-[focus-visible=true]:outline-none data-[focus-visible=true]:ring-indicator-info data-[focus-visible=true]:ring-2 data-[disabled=true]:opacity-40 w-full rounded-2xl p-3"
    collapsable={false}
    dataSet={
      {
        "active": "false",
        "disabled": "false",
        "focus": "false",
        "focusVisible": "false",
        "hover": "false",
      }
    }
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    states={
      {
        "active": false,
        "disabled": undefined,
        "focus": false,
        "focusVisible": false,
        "hover": false,
      }
    }
    style={
      {
        "backgroundColor": "#FFFFFF",
      }
    }
    testID="custom-profile"
  >
    <View
      className="flex-row gap-3 items-center"
    >
      <View
        className="rounded-full justify-center items-center relative bg-primary-600 group-[.avatar-group]/avatar-group:-ml-2.5 w-12 h-12"
        style={
          {
            "backgroundColor": "#E5E7EB",
          }
        }
        testID="profile-card-avatar"
      >
        <MaterialCommunityIcons
          color="#6B7280"
          name="account"
          size={28}
        />
        <Image
          alt="Warren de Leon"
          className="h-full w-full rounded-full absolute z-10"
          onError={[Function]}
          source={
            {
              "uri": "https://example.com/avatar.jpg",
            }
          }
        />
      </View>
      <View
        className="flex-col gap-1 flex-1"
      >
        <Text
          style={
            {
              "color": "#000000",
            }
          }
        >
          Warren de Leon
        </Text>
        <Text
          style={
            {
              "color": "#6B6B6B",
            }
          }
        >
          View Profile
        </Text>
      </View>
      <RNSVGSvgView
        align="xMidYMid"
        bbHeight={20}
        bbWidth={20}
        fill="none"
        focusable={false}
        height={20}
        meetOrSlice={0}
        minX={0}
        minY={0}
        stroke="#6B6B6B"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth={2}
        style={
          [
            {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            {
              "flex": 0,
              "height": 20,
              "width": 20,
            },
          ]
        }
        vbHeight={24}
        vbWidth={24}
        width={20}
        xmlns="http://www.w3.org/2000/svg"
      >
        <RNSVGGroup
          fill={null}
          propList={
            [
              "fill",
              "stroke",
              "strokeWidth",
              "strokeLinecap",
              "strokeLinejoin",
            ]
          }
          stroke={
            {
              "payload": 4285229931,
              "type": 0,
            }
          }
          strokeLinecap={1}
          strokeLinejoin={1}
          strokeWidth={2}
        >
          <RNSVGPath
            d="m9 18 6-6-6-6"
            fill={null}
            propList={
              [
                "fill",
                "stroke",
                "strokeWidth",
                "strokeLinecap",
                "strokeLinejoin",
              ]
            }
            stroke={
              {
                "payload": 4285229931,
                "type": 0,
              }
            }
            strokeLinecap={1}
            strokeLinejoin={1}
            strokeWidth={2}
          />
        </RNSVGGroup>
      </RNSVGSvgView>
    </View>
  </View>
</View>
`;

exports[`ProfileCard Snapshots Name Variants renders with Unicode characters: ProfileCard - Unicode Name 1`] = `
<View
  style={
    [
      {},
      {
        "flex": 1,
        "height": "100%",
        "width": "100%",
      },
      undefined,
    ]
  }
>
  <View
    accessibilityHint="Opens your profile details"
    accessibilityLabel="田中 太郎, View Profile"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    className="data-[focus-visible=true]:outline-none data-[focus-visible=true]:ring-indicator-info data-[focus-visible=true]:ring-2 data-[disabled=true]:opacity-40 w-full rounded-2xl p-3"
    collapsable={false}
    dataSet={
      {
        "active": "false",
        "disabled": "false",
        "focus": "false",
        "focusVisible": "false",
        "hover": "false",
      }
    }
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    states={
      {
        "active": false,
        "disabled": undefined,
        "focus": false,
        "focusVisible": false,
        "hover": false,
      }
    }
    style={
      {
        "backgroundColor": "#FFFFFF",
      }
    }
    testID="profile-card"
  >
    <View
      className="flex-row gap-3 items-center"
    >
      <View
        className="rounded-full justify-center items-center relative bg-primary-600 group-[.avatar-group]/avatar-group:-ml-2.5 w-12 h-12"
        style={
          {
            "backgroundColor": "#E5E7EB",
          }
        }
        testID="profile-card-avatar"
      >
        <MaterialCommunityIcons
          color="#6B7280"
          name="account"
          size={28}
        />
        <Image
          alt="田中 太郎"
          className="h-full w-full rounded-full absolute z-10"
          onError={[Function]}
          source={
            {
              "uri": "https://example.com/avatar.jpg",
            }
          }
        />
      </View>
      <View
        className="flex-col gap-1 flex-1"
      >
        <Text
          style={
            {
              "color": "#000000",
            }
          }
        >
          田中 太郎
        </Text>
        <Text
          style={
            {
              "color": "#6B6B6B",
            }
          }
        >
          View Profile
        </Text>
      </View>
      <RNSVGSvgView
        align="xMidYMid"
        bbHeight={20}
        bbWidth={20}
        fill="none"
        focusable={false}
        height={20}
        meetOrSlice={0}
        minX={0}
        minY={0}
        stroke="#6B6B6B"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth={2}
        style={
          [
            {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            {
              "flex": 0,
              "height": 20,
              "width": 20,
            },
          ]
        }
        vbHeight={24}
        vbWidth={24}
        width={20}
        xmlns="http://www.w3.org/2000/svg"
      >
        <RNSVGGroup
          fill={null}
          propList={
            [
              "fill",
              "stroke",
              "strokeWidth",
              "strokeLinecap",
              "strokeLinejoin",
            ]
          }
          stroke={
            {
              "payload": 4285229931,
              "type": 0,
            }
          }
          strokeLinecap={1}
          strokeLinejoin={1}
          strokeWidth={2}
        >
          <RNSVGPath
            d="m9 18 6-6-6-6"
            fill={null}
            propList={
              [
                "fill",
                "stroke",
                "strokeWidth",
                "strokeLinecap",
                "strokeLinejoin",
              ]
            }
            stroke={
              {
                "payload": 4285229931,
                "type": 0,
              }
            }
            strokeLinecap={1}
            strokeLinejoin={1}
            strokeWidth={2}
          />
        </RNSVGGroup>
      </RNSVGSvgView>
    </View>
  </View>
</View>
`;

exports[`ProfileCard Snapshots Name Variants renders with emoji in name: ProfileCard - Emoji Name 1`] = `
<View
  style={
    [
      {},
      {
        "flex": 1,
        "height": "100%",
        "width": "100%",
      },
      undefined,
    ]
  }
>
  <View
    accessibilityHint="Opens your profile details"
    accessibilityLabel="John 👨‍💻 Doe, View Profile"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    className="data-[focus-visible=true]:outline-none data-[focus-visible=true]:ring-indicator-info data-[focus-visible=true]:ring-2 data-[disabled=true]:opacity-40 w-full rounded-2xl p-3"
    collapsable={false}
    dataSet={
      {
        "active": "false",
        "disabled": "false",
        "focus": "false",
        "focusVisible": "false",
        "hover": "false",
      }
    }
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    states={
      {
        "active": false,
        "disabled": undefined,
        "focus": false,
        "focusVisible": false,
        "hover": false,
      }
    }
    style={
      {
        "backgroundColor": "#FFFFFF",
      }
    }
    testID="profile-card"
  >
    <View
      className="flex-row gap-3 items-center"
    >
      <View
        className="rounded-full justify-center items-center relative bg-primary-600 group-[.avatar-group]/avatar-group:-ml-2.5 w-12 h-12"
        style={
          {
            "backgroundColor": "#E5E7EB",
          }
        }
        testID="profile-card-avatar"
      >
        <MaterialCommunityIcons
          color="#6B7280"
          name="account"
          size={28}
        />
        <Image
          alt="John 👨‍💻 Doe"
          className="h-full w-full rounded-full absolute z-10"
          onError={[Function]}
          source={
            {
              "uri": "https://example.com/avatar.jpg",
            }
          }
        />
      </View>
      <View
        className="flex-col gap-1 flex-1"
      >
        <Text
          style={
            {
              "color": "#000000",
            }
          }
        >
          John 👨‍💻 Doe
        </Text>
        <Text
          style={
            {
              "color": "#6B6B6B",
            }
          }
        >
          View Profile
        </Text>
      </View>
      <RNSVGSvgView
        align="xMidYMid"
        bbHeight={20}
        bbWidth={20}
        fill="none"
        focusable={false}
        height={20}
        meetOrSlice={0}
        minX={0}
        minY={0}
        stroke="#6B6B6B"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth={2}
        style={
          [
            {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            {
              "flex": 0,
              "height": 20,
              "width": 20,
            },
          ]
        }
        vbHeight={24}
        vbWidth={24}
        width={20}
        xmlns="http://www.w3.org/2000/svg"
      >
        <RNSVGGroup
          fill={null}
          propList={
            [
              "fill",
              "stroke",
              "strokeWidth",
              "strokeLinecap",
              "strokeLinejoin",
            ]
          }
          stroke={
            {
              "payload": 4285229931,
              "type": 0,
            }
          }
          strokeLinecap={1}
          strokeLinejoin={1}
          strokeWidth={2}
        >
          <RNSVGPath
            d="m9 18 6-6-6-6"
            fill={null}
            propList={
              [
                "fill",
                "stroke",
                "strokeWidth",
                "strokeLinecap",
                "strokeLinejoin",
              ]
            }
            stroke={
              {
                "payload": 4285229931,
                "type": 0,
              }
            }
            strokeLinecap={1}
            strokeLinejoin={1}
            strokeWidth={2}
          />
        </RNSVGGroup>
      </RNSVGSvgView>
    </View>
  </View>
</View>
`;

exports[`ProfileCard Snapshots Name Variants renders with long name: ProfileCard - Long Name 1`] = `
<View
  style={
    [
      {},
      {
        "flex": 1,
        "height": "100%",
        "width": "100%",
      },
      undefined,
    ]
  }
>
  <View
    accessibilityHint="Opens your profile details"
    accessibilityLabel="Extraordinarily LongLastNameThatCouldPotentiallyCauseLayoutIssues, View Profile"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    className="data-[focus-visible=true]:outline-none data-[focus-visible=true]:ring-indicator-info data-[focus-visible=true]:ring-2 data-[disabled=true]:opacity-40 w-full rounded-2xl p-3"
    collapsable={false}
    dataSet={
      {
        "active": "false",
        "disabled": "false",
        "focus": "false",
        "focusVisible": "false",
        "hover": "false",
      }
    }
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    states={
      {
        "active": false,
        "disabled": undefined,
        "focus": false,
        "focusVisible": false,
        "hover": false,
      }
    }
    style={
      {
        "backgroundColor": "#FFFFFF",
      }
    }
    testID="profile-card"
  >
    <View
      className="flex-row gap-3 items-center"
    >
      <View
        className="rounded-full justify-center items-center relative bg-primary-600 group-[.avatar-group]/avatar-group:-ml-2.5 w-12 h-12"
        style={
          {
            "backgroundColor": "#E5E7EB",
          }
        }
        testID="profile-card-avatar"
      >
        <MaterialCommunityIcons
          color="#6B7280"
          name="account"
          size={28}
        />
        <Image
          alt="Extraordinarily LongLastNameThatCouldPotentiallyCauseLayoutIssues"
          className="h-full w-full rounded-full absolute z-10"
          onError={[Function]}
          source={
            {
              "uri": "https://example.com/avatar.jpg",
            }
          }
        />
      </View>
      <View
        className="flex-col gap-1 flex-1"
      >
        <Text
          style={
            {
              "color": "#000000",
            }
          }
        >
          Extraordinarily LongLastNameThatCouldPotentiallyCauseLayoutIssues
        </Text>
        <Text
          style={
            {
              "color": "#6B6B6B",
            }
          }
        >
          View Profile
        </Text>
      </View>
      <RNSVGSvgView
        align="xMidYMid"
        bbHeight={20}
        bbWidth={20}
        fill="none"
        focusable={false}
        height={20}
        meetOrSlice={0}
        minX={0}
        minY={0}
        stroke="#6B6B6B"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth={2}
        style={
          [
            {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            {
              "flex": 0,
              "height": 20,
              "width": 20,
            },
          ]
        }
        vbHeight={24}
        vbWidth={24}
        width={20}
        xmlns="http://www.w3.org/2000/svg"
      >
        <RNSVGGroup
          fill={null}
          propList={
            [
              "fill",
              "stroke",
              "strokeWidth",
              "strokeLinecap",
              "strokeLinejoin",
            ]
          }
          stroke={
            {
              "payload": 4285229931,
              "type": 0,
            }
          }
          strokeLinecap={1}
          strokeLinejoin={1}
          strokeWidth={2}
        >
          <RNSVGPath
            d="m9 18 6-6-6-6"
            fill={null}
            propList={
              [
                "fill",
                "stroke",
                "strokeWidth",
                "strokeLinecap",
                "strokeLinejoin",
              ]
            }
            stroke={
              {
                "payload": 4285229931,
                "type": 0,
              }
            }
            strokeLinecap={1}
            strokeLinejoin={1}
            strokeWidth={2}
          />
        </RNSVGGroup>
      </RNSVGSvgView>
    </View>
  </View>
</View>
`;

exports[`ProfileCard Snapshots Name Variants renders with short name: ProfileCard - Short Name 1`] = `
<View
  style={
    [
      {},
      {
        "flex": 1,
        "height": "100%",
        "width": "100%",
      },
      undefined,
    ]
  }
>
  <View
    accessibilityHint="Opens your profile details"
    accessibilityLabel="J D, View Profile"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    className="data-[focus-visible=true]:outline-none data-[focus-visible=true]:ring-indicator-info data-[focus-visible=true]:ring-2 data-[disabled=true]:opacity-40 w-full rounded-2xl p-3"
    collapsable={false}
    dataSet={
      {
        "active": "false",
        "disabled": "false",
        "focus": "false",
        "focusVisible": "false",
        "hover": "false",
      }
    }
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    states={
      {
        "active": false,
        "disabled": undefined,
        "focus": false,
        "focusVisible": false,
        "hover": false,
      }
    }
    style={
      {
        "backgroundColor": "#FFFFFF",
      }
    }
    testID="profile-card"
  >
    <View
      className="flex-row gap-3 items-center"
    >
      <View
        className="rounded-full justify-center items-center relative bg-primary-600 group-[.avatar-group]/avatar-group:-ml-2.5 w-12 h-12"
        style={
          {
            "backgroundColor": "#E5E7EB",
          }
        }
        testID="profile-card-avatar"
      >
        <MaterialCommunityIcons
          color="#6B7280"
          name="account"
          size={28}
        />
        <Image
          alt="J D"
          className="h-full w-full rounded-full absolute z-10"
          onError={[Function]}
          source={
            {
              "uri": "https://example.com/avatar.jpg",
            }
          }
        />
      </View>
      <View
        className="flex-col gap-1 flex-1"
      >
        <Text
          style={
            {
              "color": "#000000",
            }
          }
        >
          J D
        </Text>
        <Text
          style={
            {
              "color": "#6B6B6B",
            }
          }
        >
          View Profile
        </Text>
      </View>
      <RNSVGSvgView
        align="xMidYMid"
        bbHeight={20}
        bbWidth={20}
        fill="none"
        focusable={false}
        height={20}
        meetOrSlice={0}
        minX={0}
        minY={0}
        stroke="#6B6B6B"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth={2}
        style={
          [
            {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            {
              "flex": 0,
              "height": 20,
              "width": 20,
            },
          ]
        }
        vbHeight={24}
        vbWidth={24}
        width={20}
        xmlns="http://www.w3.org/2000/svg"
      >
        <RNSVGGroup
          fill={null}
          propList={
            [
              "fill",
              "stroke",
              "strokeWidth",
              "strokeLinecap",
              "strokeLinejoin",
            ]
          }
          stroke={
            {
              "payload": 4285229931,
              "type": 0,
            }
          }
          strokeLinecap={1}
          strokeLinejoin={1}
          strokeWidth={2}
        >
          <RNSVGPath
            d="m9 18 6-6-6-6"
            fill={null}
            propList={
              [
                "fill",
                "stroke",
                "strokeWidth",
                "strokeLinecap",
                "strokeLinejoin",
              ]
            }
            stroke={
              {
                "payload": 4285229931,
                "type": 0,
              }
            }
            strokeLinecap={1}
            strokeLinejoin={1}
            strokeWidth={2}
          />
        </RNSVGGroup>
      </RNSVGSvgView>
    </View>
  </View>
</View>
`;

exports[`ProfileCard Snapshots Name Variants renders with special characters in name: ProfileCard - Special Characters Name 1`] = `
<View
  style={
    [
      {},
      {
        "flex": 1,
        "height": "100%",
        "width": "100%",
      },
      undefined,
    ]
  }
>
  <View
    accessibilityHint="Opens your profile details"
    accessibilityLabel="José García-Pérez, View Profile"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    className="data-[focus-visible=true]:outline-none data-[focus-visible=true]:ring-indicator-info data-[focus-visible=true]:ring-2 data-[disabled=true]:opacity-40 w-full rounded-2xl p-3"
    collapsable={false}
    dataSet={
      {
        "active": "false",
        "disabled": "false",
        "focus": "false",
        "focusVisible": "false",
        "hover": "false",
      }
    }
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    states={
      {
        "active": false,
        "disabled": undefined,
        "focus": false,
        "focusVisible": false,
        "hover": false,
      }
    }
    style={
      {
        "backgroundColor": "#FFFFFF",
      }
    }
    testID="profile-card"
  >
    <View
      className="flex-row gap-3 items-center"
    >
      <View
        className="rounded-full justify-center items-center relative bg-primary-600 group-[.avatar-group]/avatar-group:-ml-2.5 w-12 h-12"
        style={
          {
            "backgroundColor": "#E5E7EB",
          }
        }
        testID="profile-card-avatar"
      >
        <MaterialCommunityIcons
          color="#6B7280"
          name="account"
          size={28}
        />
        <Image
          alt="José García-Pérez"
          className="h-full w-full rounded-full absolute z-10"
          onError={[Function]}
          source={
            {
              "uri": "https://example.com/avatar.jpg",
            }
          }
        />
      </View>
      <View
        className="flex-col gap-1 flex-1"
      >
        <Text
          style={
            {
              "color": "#000000",
            }
          }
        >
          José García-Pérez
        </Text>
        <Text
          style={
            {
              "color": "#6B6B6B",
            }
          }
        >
          View Profile
        </Text>
      </View>
      <RNSVGSvgView
        align="xMidYMid"
        bbHeight={20}
        bbWidth={20}
        fill="none"
        focusable={false}
        height={20}
        meetOrSlice={0}
        minX={0}
        minY={0}
        stroke="#6B6B6B"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth={2}
        style={
          [
            {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            {
              "flex": 0,
              "height": 20,
              "width": 20,
            },
          ]
        }
        vbHeight={24}
        vbWidth={24}
        width={20}
        xmlns="http://www.w3.org/2000/svg"
      >
        <RNSVGGroup
          fill={null}
          propList={
            [
              "fill",
              "stroke",
              "strokeWidth",
              "strokeLinecap",
              "strokeLinejoin",
            ]
          }
          stroke={
            {
              "payload": 4285229931,
              "type": 0,
            }
          }
          strokeLinecap={1}
          strokeLinejoin={1}
          strokeWidth={2}
        >
          <RNSVGPath
            d="m9 18 6-6-6-6"
            fill={null}
            propList={
              [
                "fill",
                "stroke",
                "strokeWidth",
                "strokeLinecap",
                "strokeLinejoin",
              ]
            }
            stroke={
              {
                "payload": 4285229931,
                "type": 0,
              }
            }
            strokeLinecap={1}
            strokeLinejoin={1}
            strokeWidth={2}
          />
        </RNSVGGroup>
      </RNSVGSvgView>
    </View>
  </View>
</View>
`;

exports[`getProfileCardStyles Snapshots dark mode styles match snapshot: getProfileCardStyles - Dark Mode 1`] = `
{
  "avatarBg": "#374151",
  "avatarIconColor": "#9CA3AF",
  "bg": "#262626",
  "chevronColor": "#A3A3A3",
  "nameColor": "#FFFFFF",
  "subtitleColor": "#A3A3A3",
}
`;

exports[`getProfileCardStyles Snapshots light mode styles match snapshot: getProfileCardStyles - Light Mode 1`] = `
{
  "avatarBg": "#E5E7EB",
  "avatarIconColor": "#6B7280",
  "bg": "#FFFFFF",
  "chevronColor": "#6B6B6B",
  "nameColor": "#000000",
  "subtitleColor": "#6B6B6B",
}
`;
